# rec-registry

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  dump.yaml  pyproject.toml  rec-example.yaml  sources.txt  taskfile.yml
.github/workflows/: release.yaml  update-docs.yaml
alembic/: env.py
alembic/versions/: 0001_init.py
celine/rec_registry/: main.py
celine/rec_registry/api/: admin.py  communities.py  contexts.py  meta.py  render.py  util.py
celine/rec_registry/cli/: main.py
celine/rec_registry/core/: middleware.py  policy.py  settings.py  yaml_io.py
celine/rec_registry/db/: models.py  session.py
celine/rec_registry/models/: __init__.py  asset.py  base.py  community.py  membership.py  meter.py  participant.py  site.py  tariff.py  timeseries.py  topology.py
celine/rec_registry/resources/: celine-context.jsonld  celine-jsonld.schema.json  celine-profile.ttl  celine-shacl.ttl
celine/rec_registry/schemas/: admin.py  bundle.py  entities.py  import_yaml.py  iri.py  jsonld.py
celine/rec_registry/services/: exporter.py  importer.py  iri.py  jsonld.py  yaml_mapping.py
recs/: .gitignore  rec-example.yaml
schemas/community/v0.3/: README.md  community.schema.json
